FIXED Gui blocking when downloading